Refactoring directory structure; Reviewing code